--- a/app/views/summaries/index.html.erb
+++ b/app/views/summaries/index.html.erb
@@ -6,8 +6,8 @@
   <fieldset>
     <h2>Summary Period</h2>
     <ol class="section fourth">
-      <li><label>Start Date:</label> <%= date_select( :period_start, "", :end_year => Time.now.year, :order => [:month, :year] ) %></li>
-      <li><label>End Date:</label> <%= date_select( :period_end, "", :end_year => Time.now.year, :order => [:month, :year] ) %></li>
+      <li><label>Start Date:</label> <%= f.date_select( :period_start, :end_year => Date.today.year, :order => [:month, :year] ) %></li>
+      <li><label>End Date:</label> <%= f.date_select( :period_end, :end_year => Date.today.year, :order => [:month, :year] ) %></li>
 
       <li>
         <h2>Allocations</h2>
