Users no longer have names

--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -30,5 +30,5 @@
 <li><%= f.label :apportioned_duration %> <%= f.text_field :apportioned_duration, :disabled => true %></li>
 <li><%= f.label :apportioned_mileage %> <%= f.text_field :apportioned_mileage, :disabled => true %></li>
 <li><%= f.label :apportioned_fare %> <%= f.text_field :apportioned_fare, :disabled => true %></li>
-<li><%= f.label :updated_by %> <%= text_field_tag :updated_by_name, @updated_by_user.name, :disabled => true %></li>
+<li><%= f.label :updated_by %> <%= text_field_tag :updated_by_name, @updated_by_user.email, :disabled => true %></li>
 </ul>
