style and markup changes; jeff's .js changes

--- a/app/views/customers/report.html.erb
+++ b/app/views/customers/report.html.erb
@@ -1,5 +1,6 @@
 SPD Report from <%= @start_date %><br/>
 
+<div class="report-wrapper">
 <table>
   <tr>
     <th>Case Manager</th>
@@ -29,9 +30,11 @@ SPD Report from <%= @start_date %><br/>
 <% end %>
 
 </table>
+</div>
 
 <br/>
 
+<div class="report-wrapper">
 <table>
   <tr>
     <th>Mobility</th>
@@ -65,3 +68,4 @@ SPD Report from <%= @start_date %><br/>
   </tr>
 
 </table>
+</div>
