--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,7 +1,11 @@
+<div id="page-header">
+  <h1>Edit Trip</h1>
+</div>
+
 <% if @trip.versions.count > 1 %>
 <div id="history">
   <h2>Versions</h2>
-  <ul><!-- Right now, the versions method isn't sorted at all. I suspect we'll want to add that (maybe at the model level?) -->
+  <ol><!-- Right now, the versions method isn't sorted at all. I suspect we'll want to add that (maybe at the model level?) -->
   <% @trip.chronological_versions.each do |version| %>
     <li>
       <% if (version.id == @trip.id) %>
@@ -12,7 +16,7 @@
       <span class="update-user">(<%= version.updated_by_user.name %>)</span>
     </li>
   <% end %>
-  </ul>
+  </ol>
 </div><!-- /#history -->
 <% end %>
 <%= form_for @trip, :url=>{:action=>:update} do |f| %>
