--- a/app/views/runs/_runs.html.erb
+++ b/app/views/runs/_runs.html.erb
@@ -4,6 +4,7 @@
 
 <%= link_to 'Mark All Complete', { :action=>:bulk_update, "query[start_date]" => @query.start_date, "query[end_date]" => @query.end_date }, :class=>"mark-complete", :confirm=>"Are you sure you want to mark all runs complete?" %>
 
+<div class="report-wrapper">
 <table id="run-results">
   <thead>
     <tr>
@@ -32,6 +33,7 @@
     <% end %>
   </tbody>
 </table>
+</div>
 
 <% end %>
 
