--- a/app/views/trips/run.html.erb
+++ b/app/views/trips/run.html.erb
@@ -1,2 +1,5 @@
-         <h1>View Trips from Run ID <%= params[:id] %> (<%= @run.display_name %>) </h1>
+<div id="page-header">
+  <h1>View Trips from Run ID <%= params[:id] %> (<%= @run.display_name %>) </h1>
+</div>
+
 <%= render "trips" %>
