style custom grouping ui

--- a/app/views/reports/show_create_report.html.erb
+++ b/app/views/reports/show_create_report.html.erb
@@ -31,25 +31,24 @@
           <option value="funding_source,agency">Funding Source, Provider</option>
           <option value="project_name,agency">Project Name, Provider</option>
           <option value="agency,county,project_name">Provider, County, Project Name</option>
-	  <option value="">Define Custom Grouping...</option>
+      	  <option value="">Define Custom Grouping...</option>
         </select>
 
-	<div style="display:none;" id="group-by-custom-section">
+      	<div style="display:none;" id="group-by-custom-section">
 	        <p><strong>Select fields to group by:</strong></p>
-
-		<span id="group-by-custom-wrapper">
+      		<span id="group-by-custom-wrapper">
 	        	<span class="template">
-			  <select>
-		            <option value="county">County</option>
+      			  <select>
+  	            <option value="county">County</option>
         		    <option value="funding_source">Funding Source</option>
-		            <option value="project_name">Project Name</option>
+  	            <option value="project_name">Project Name</option>
         		    <option value="agency">Provider</option>
-	        	  </select>
-  			</span>
-		</span>
+          	  </select>
+      			</span>
+      		</span>
+      		<p><a href="#" class="add">Add New Group Field</a></p>
+      	</div>
 
-		<p><a href="#">Add New Group Field</a></p>
-	</div>
       </li>
     </ol>
 
