--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,24 @@
-<h2>Forgot your password?</h2>
+<div id="page-header">
+  <h1>Forgot Your Password?</h1>
+</div>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+  <fieldset>
 
-  <p><%= f.label :email %><br />
-  <%= f.text_field :email %></p>
 
-  <p><%= f.submit "Send me reset password instructions" %></p>
+    <ol class="section first">
+      <li><%= f.label :email %><%= f.text_field :email %></li>
+    </ol>
+
+    <div class="actions">
+      <%= f.submit "Send me reset password instructions, please." %>
+    </div>
+
+  </fieldset>
 <% end %>
+
+<%= devise_error_messages! %>
+
+<hr />
 
 <%= render :partial => "devise/shared/links" %>
