--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,19 +4,18 @@
 
 <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
   <fieldset>
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-
-    <% if devise_mapping.rememberable? -%>
-    <%= f.check_box :remember_me %> <%= f.label :remember_me %>
-    <% end -%>
+    <ol class="section first">
+      <li><%= f.label :email, "Email:" %><%= f.text_field :email %></li>
+      <li><%= f.label :password, "Password:" %><%= f.password_field :password %></li>
+      <% if devise_mapping.rememberable? %>
+      <li><%= f.label :remember_me, "Remember Me:" %><%= f.check_box :remember_me %></li>
+      <% end %>
+    </ol>
 
     <div class="actions">
       <%= f.submit "Sign in" %>
     </div>
+
   </fieldset>
 <% end %>
 
