--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -11,7 +11,7 @@
     </ol>
 
     <div class="actions">
-      <%= f.submit "Send me reset password instructions, please." %>
+      <%= f.submit "Send me reset password instructions." %>
     </div>
 
   </fieldset>
