--- a/app/views/trips/show_bulk_update.html.erb
+++ b/app/views/trips/show_bulk_update.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>Mark Complete</h1>
+  <h1>Mark Runs Complete</h1>
 </div>
 
 <%= form_tag :action=>:bulk_update, :method=>"POST" do  %>
