fix summary month  input

--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -4,7 +4,7 @@
 
     <ol class="section summary-form-part-one">
       <li><%= f.label :allocation, "Allocation:" %> <%= f.collection_select :allocation_id, @allocations, :id, :name %></li>
-      <li><label>Summary Month:</label> <%= date_select( :period_start, "", :end_year => Time.now.year, :order => [:month, :year], :default => Time.now - 1.month ) %></li>
+      <li><label>Summary Month:</label> <%= f.date_select( :period_start, :end_year => Time.now.year, :order => [:month, :year], :default => Date.today.prev_month ) %></li>
     </ol>
 
     <ol class="section summary-form-part-two">
