--- a/app/views/trips/list.html.erb
+++ b/app/views/trips/list.html.erb
@@ -21,4 +21,13 @@
   </fieldset>
 <% end %>
 
+<%= form_for @query, :html=>{:id=>"trip-filter", :method=>:get}, :url=>{:action=>:list} do |f| %>
+    <%= f.hidden_field :format, {:value=>"csv"} %>
+    <%= f.hidden_field :start_date %>
+    <%= f.hidden_field :end_date %>
+    <%= f.hidden_field :provider %>
+    <%= f.hidden_field :allocation %>
+    <input id="csv" type="submit" value="CSV" />
+<% end %>
+
 <%= render "trips" %>
