--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -17,16 +17,17 @@
       <% if @fields.member? 'total_trips' %><th class="wrap">Total This Period</th><% end %>
       <% if @fields.member? 'total_last_year' %><th class="wrap">Last Year's Total This Period</th><% end %>
       <% if @fields.member? 'mileage' %><th class="wrap">Mileage</th><% end %>
-      <% if @fields['driver_hours'] > 0 %><th colspan="<%= @fields['driver_hours'] %>">Driver Hours<% end %>
+
+      <% if @fields.member? 'driver_volunteer_hours' %><th class="wrap">Volunteer Driver Hours</th><% end %>
+      <% if @fields.member? 'driver_paid_hours' %><th class="wrap">Paid Driver Hours</th><% end %>
+      <% if @fields.member? 'driver_total_hours' %><th class="wrap">Total Driver Hours</th><% end %>
+
       <% if @fields.member? 'cost_per_trip' %><th class="wrap">Cost/Trip</th><% end %>
       <% if @fields.member? 'cost_per_mile' %><th class="wrap">Cost/Mile</th><% end %>
       <% if @fields.member? 'cost_per_hour' %><th class="wrap">Cost/Hour</th><% end %>
       <% if @fields.member? 'miles_per_ride' %><th class="wrap">Miles/Ride</th><% end %>
       <% if @fields.member? 'turn_downs' %><th class="wrap">Turn Downs</th><% end %>
       <% if @fields.member? 'undup_riders' %><th class="wrap">Undup Riders</th><% end %>
-      <% if @fields.member? 'driver_volunteer_hours' %><th class="wrap">Volunteer</th><% end %>
-      <% if @fields.member? 'driver_paid_hours' %><th class="wrap">Paid</th><% end %>
-      <% if @fields.member? 'driver_total_hours' %><th class="wrap">Total</th><% end %>
       <% if @fields.member? 'escort_volunteer_hours' %><th class="wrap">Escort</th><% end %>
       <% if @fields.member? 'admin_volunteer_hours' %><th class="wrap">Admin</th><% end %>
       <% if @fields.member? 'total_volunteer_hours' %><th class="wrap">Total</th><% end %>
