--- a/app/views/reports/_totals.html.erb
+++ b/app/views/reports/_totals.html.erb
@@ -4,31 +4,31 @@
       <!-- you will never be tr_open here -->
       <tr class="<% if group_fields.size >= 2 %>sum-<% end %>totals">
         <td colspan="<%=group_fields.size%>">Totals</td>
-<% if @fields.member? 'funds' %><td><%= '%.2f' % row.funds %></td><%end%>
-<% if @fields.member? 'agency_other' %><td><%= '%.2f' % row.agency_other %></td><%end%>
-<% if @fields.member? 'vehicle_maint' %><td><%= '%.2f' % row.vehicle_maint %></td><%end%>
-<% if @fields.member? 'administrative' %><td><%= '%.2f' % row.administrative %></td><%end%>
-<% if @fields.member? 'operations' %><td><%= '%.2f' % row.operations %></td><%end%>
-<% if @fields.member? 'donations' %><td><%= '%.2f' % row.donations %></td><%end%>
-<% if @fields.member? 'fares' %><td><%= '%.2f' % row.fares %></td><%end%>
-<% if @fields.member? 'total' %><td><%= '%.2f' % row.total %></td><%end%>
-<% if @fields.member? 'in_district_trips' %><td><%= row.in_district_trips %></td><%end%>
-<% if @fields.member? 'out_of_district_trips' %><td><%= row.out_of_district_trips %></td><%end%>
-<% if @fields.member? 'total_trips' %><td><%= row.total_trips %></td><%end%>
-<% if @fields.member? 'total_last_year' %><td><%= '%.2f' % row.total_last_year %></td><%end%>
+<% if @fields.member? 'funds' %><td>$<%= '%0.2f' % row.funds %></td><%end%>
+<% if @fields.member? 'agency_other' %><td>$<%= '%0.2f' % row.agency_other %></td><%end%>
+<% if @fields.member? 'vehicle_maint' %><td>$<%= '%0.2f' % row.vehicle_maint %></td><%end%>
+<% if @fields.member? 'administrative' %><td>$<%= '%0.2f' % row.administrative %></td><%end%>
+<% if @fields.member? 'operations' %><td>$<%= '%0.2f' % row.operations %></td><%end%>
+<% if @fields.member? 'donations' %><td>$<%= '%0.2f' % row.donations %></td><%end%>
+<% if @fields.member? 'fares' %><td>$<%= '%0.2f' % row.fares %></td><%end%>
+<% if @fields.member? 'total' %><td>$<%= '%0.2f' % row.total %></td><%end%>
+<% if @fields.member? 'in_district_trips' %><td><%= row.in_district_trips.to_i %></td><%end%>
+<% if @fields.member? 'out_of_district_trips' %><td><%= row.out_of_district_trips.to_i %></td><%end%>
+<% if @fields.member? 'total_trips' %><td><%= row.total_trips.to_i %></td><%end%>
+<% if @fields.member? 'total_last_year' %><td><%= row.total_last_year.to_i %></td><%end%>
 <% if @fields.member? 'mileage' %><td><%= row.mileage %></td><%end%>
-<% if @fields.member? 'driver_volunteer_hours' %><td><%= '%.2f' % row.driver_volunteer_hours %></td><%end%>
-<% if @fields.member? 'driver_paid_hours' %><td><%= '%.2f' % row.driver_paid_hours %></td><%end%>
-<% if @fields.member? 'driver_total_hours' %><td><%= '%.2f' % row.driver_total_hours %></td><%end%>
-<% if @fields.member? 'cost_per_trip' %><td><%= '%.2f' % row.cost_per_trip %></td><%end%>
-<% if @fields.member? 'cost_per_mile' %><td><%= row.cost_per_mile == -1 ? 
+<% if @fields.member? 'driver_volunteer_hours' %><td><%= '%0.2f' % row.driver_volunteer_hours %></td><%end%>
+<% if @fields.member? 'driver_paid_hours' %><td><%= '%0.2f' % row.driver_paid_hours %></td><%end%>
+<% if @fields.member? 'driver_total_hours' %><td><%= '%0.2f' % row.driver_total_hours %></td><%end%>
+<% if @fields.member? 'cost_per_trip' %><td><%= '%0.2f' % row.cost_per_trip %></td><%end%>
+<% if @fields.member? 'cost_per_mile' %><td>$<%= row.cost_per_mile == -1 ? 
                 'N/A' :
-                ('%.2f' % row.cost_per_mile) %></td><%end%>
-<% if @fields.member? 'cost_per_hour' %><td><%= '%.2f' % row.cost_per_hour %></td><%end%>
-<% if @fields.member? 'miles_per_ride' %><td><%= '%.2f' % row.miles_per_ride %></td><%end%>
-<% if @fields.member? 'turn_downs' %><td><%= row.turn_downs %></td><%end%>
-<% if @fields.member? 'undup_riders' %><td><%= row.undup_riders %></td><%end%>
-<% if @fields.member? 'escort_volunteer_hours' %><td><%= row.escort_volunteer_hours %></td><%end%>
-<% if @fields.member? 'admin_volunteer_hours' %><td><%= row.admin_volunteer_hours %></td><%end%>
-<% if @fields.member? 'total_volunteer_hours' %><td><%= row.total_volunteer_hours %></td><%end%>
+                ('%0.2f' % row.cost_per_mile) %></td><%end%>
+<% if @fields.member? 'cost_per_hour' %><td>$<%= '%0.2f' % row.cost_per_hour %></td><%end%>
+<% if @fields.member? 'miles_per_ride' %><td><%= '%0.2f' % row.miles_per_ride %></td><%end%>
+<% if @fields.member? 'turn_downs' %><td><%= row.turn_downs.to_i %></td><%end%>
+<% if @fields.member? 'undup_riders' %><td><%= row.undup_riders.to_i %></td><%end%>
+<% if @fields.member? 'escort_volunteer_hours' %><td><%= '%0.2f' % row.escort_volunteer_hours %></td><%end%>
+<% if @fields.member? 'admin_volunteer_hours' %><td><%= '%0.2f' % row.admin_volunteer_hours %></td><%end%>
+<% if @fields.member? 'total_volunteer_hours' %><td><%= '%0.2f' % row.total_volunteer_hours %></td><%end%>
       </tr>
