--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -1,4 +1,10 @@
 <fieldset>
+  <% if !f.object.new_record? %>
+  <div>
+    <%= f.label :adjustment_notes %><br/>
+    <%= f.text_area :adjustment_notes, {:rows=>7, :columns=>60} %>
+  </div>
+  <% end %>
 
   <ol class="section first">
 
